--- a/CPP/C++11.md
+++ b/CPP/C++11.md
@@ -83,3 +83,60 @@
 + 修饰模板函数
 + C++11语法中，constexpr可以修饰模板函数，但是由于模板中类型的不确定性，因此模板函数实例化后的函数是否符合常量表达式函数的要求也是不确定的。
 + 如果`constexpr`修饰的模板函数实例化结果不满足常量表达式的要求，则`constexpr`会被自动忽略，即该函数就等同于一个普通函数
+
+## auto
+
++ 可以适用auto自动推导变量的类型，还能够结合decltype来表示函数的返回值
+
+### 1.1 简介
+
++ 在C++11之前auto和static是对应的，表示自动变量是自动存储的，但是非static的局部变量默认都是自动存储的，因此这个关键字变得非常鸡肋
++ 在C++11中他们赋予了新的含义，使用这个关键字能够像别的语言一样自动推导出变量的实际类型
+
++ 推导规则：
+  + C++11中auto并不代表一种实际的数据类型，只是一个类型声明的 占位符，auto 并不是万能的，在任意场景下都能够推导出变量的实际类型。
+  + **使用auto声明的变量必须要进行初始化，以让编译器推导出它的实际类型，在编译时将auto占位符替换为真正的类型**
+  + 使用语法：
+    + `auto variable_name = variable_value;`
+  + auto还可以和指针，引用结合起来使用，也可以带上const， volatile限定符，在不同的场景下有对应的推导规则。
+  + 推导规则内容如下：
+    + 当变量不是指针或者引用类型时，推导的结果不会保留const，volatile关键字
+    + 当变量是指针或者引用类型时，推导的结果会保留const，volatile关键字
+
+### 1.2 auto的限制
+
++ auto关键字并不是万能的，在以下这些场景中是不能完成类型推导的：
+  + 不能作为函数参数使用。因为只有在函数调用的时候才会给函数参数传递实参，auto要求必须要给修饰的变量赋值，因此二者矛盾
+  + 不能用于类的非静态成员变量的初始化。因为非静态成员变量是属于类的对象的，而不是属于类的。
+  + 不能使用auto关键字定义数组。定义一个数组，必须给定数组中元素的数据类型
+  + 无法使用auto推导出模板参数
+
+### 1.3 auto的应用
+
++ 下面列举几个比较常用的场景：
+  + 用于STL的容器变量。
+  + 用于泛型编程
+
+## decltype
+
++ 在某些情况下，不需要或者不能定义变量，但是希望得到某种类型，这时候就可以使用C++11提供的decltype关键字了，它的作用是在编译器编译的时候推导出一个表达式的类型
++ 语法格式如下：
+  + `decltype (表达式)`
++ decltype， 是`declare type`的缩写，意思是 声明类型。
++ decltype的推导是在编译器完成的，它只是用于表达式类型的推导，并不会计算表达式的值
+
+## 返回类型后置
+
++ 在泛型编程中，可能需要通过参数的运算来得到返回值的类型
++ 在C++11中增加了返回类型后置语法，说明白一点就是将decltype和auto结合起来完成返回类型的推导，其语法格式如下：
+  + `// 符号 -> 后边跟随的是函数返回值的类型`
+  + `auto func(参数1， 参数2，...) -> decltype (参数表达式)`
++ 通过对上述返回类型后置语法代码的分析，得到结论：`auto` 会追踪 `decltype()` 推导出的类型
+
+## final
+
++ C-C++03.md, final 部分
+
+## override
+
++ C-C++03.md，override
