complete C++11.md file

--- a/CPP/C++11.md
+++ b/CPP/C++11.md
@@ -140,3 +140,272 @@
 ## override
 
 + C-C++03.md，override
+
+## 模板的右尖括号
+
++ 在范型编程中，模板实例化有一个非常繁琐的地方，那就是连续的两个右尖括号(>>)会被编译器解析成右移操作符，而不是模板参数表的结束。
++ C++11改进了编译器的解析规则，尽可能地将多个右尖括号(>)解析成模板参数结束符
+
+## 默认模板参数
+
++ 在C++11中添加了对函数模板参数的支持
++ 当默认模板参数和模板参数自动推导同时使用时（优先级从高到低）
+  + 如果可以推导出参数类型则使用推导出的类型
+  + 如果函数模板无法推导出参数类型，那么编译器会使用默认模板参数
+  + 如果无法推导出模板参数类型并且没有设置默认模板参数，编译器就会报错
+
+## using
+
++ 在C++中using用于声明命名空间，使用命名空间也可以防止命名冲突，在程序中声明了命名空间之后，就可以直接使用命名空间中的定义的类了。在C++11中赋予了using新的功能，让C++变得更年轻，更灵活
+
+### 1.1 定义别名
+
++ 在C++中可以通过typedef重新定义一个类型，语法格式如下：
+  ```
+    // typedef 旧的类型名 新的类型名;
+    // 使用举例
+    typedef unsigned int uint_t;
+  ``` 
++ 被重定义的类型并不是一个新的类型，仅仅只是原有的类型取了一个新的名字。和以前的声明语句一样，这里的声明符也可以包含类型修饰，从而也能由基本数据类型构造出复合类型来。
++ C++11中规定了一种新的方法，使用别名(alias declaration)来定义类型的别名，即使用using
++ 在使用的时候，关键字using作为别名声明的开始，其后紧跟别名和等号，其作用是把等号左侧的名字规定成等号右侧类型的别名。
++ 类型别名和类型的名字等价，只要是类型的名字能够出现的地方，就能使用类型别名。使用typedef定义的别名和使用using定义的别名在语义上是等效的。
++ 使用using定义别名的语法格式是这样的：
+  ```
+    // using 新的类型 = 旧的类型;
+    // 使用举例
+    using uint_t = unsigned int;
+  ``` 
+
++ 通过using和typedef的语法格式可以看到二者的使用没有太大的区别，假设我们定义一个函数指针，using的优势就能凸显出来了
++ 示例：
+  ```
+    // 使用typedef定义函数指针
+    typedef int(*func_ptr)(int, double);
+
+    // 使用using定义函数指针
+    using func_ptr1 = int(*)(int, double);
+  ```  
++ 如果不是特别熟悉函数指针与typedef，第一眼很难看出func_ptr其实是一个别名，其本质是一个函数指针，指向的函数返回类型是int，函数的参数有两个分别是int， double类型
++ 使用using定义函数指针别名的写法看起来就非常直观了，把别名的名字强制分离到了左边，而把别名对应的实际类型放在了右边，比较清晰，可读性比较好
+
+### 1.2 模板的别名
+
++ 使用 typedef 重定义类似很方便，但是它有一点限制，比如无法重定义一个模板，比如我们需要一个固定以 int 类型为 key 的 map，它可以和很多类型的 value 值进行映射，如果使用 typedef 这样直接定义就非常麻烦:
+  ```
+    typedef map<int, string> m1;
+    typedef map<int, int> m2;
+    typedef map<int, double> m3;
+  ``` 
+
++ 在 C++11 中，新增了一个特性就是可以通过使用 using 来为一个模板定义别名，对于上面的需求可以写成这样：
+  ```
+    template <typename T>
+    using mymap = map<int, T>;
+  ``` 
++ 上面的例子中通过使用 using 给模板指定别名，就可以基于别名非常方便的给 value 指定相应的类型，这样使编写的程序变得更加灵活，看起来也更加简洁一些。
+
++ 最后在强调一点：using 语法和 typedef 一样，并不会创建出新的类型，它们只是给某些类型定义了新的别名。using 相较于 typedef 的优势在于定义函数指针别名时看起来更加直观，并且可以给模板定义别名
+
+## 委托构造函数和继承构造函数
+
+### 1.1 委托构造函数
+
++ 委托构造函数允许使用同一个类中的一个构造函数调用其它的构造函数，从而简化相关变量的初始化
+
+### 1.2 继承构造函数
+
++ C++11 中提供的继承构造函数可以让派生类直接使用基类的构造函数，而无需自己再写构造函数，尤其是在基类有很多构造函数的情况下，可以极大地简化派生类构造函数的编写
+
+## 列表初始化
+
+## 基于范围的for循环
+
+### 1.1 for循环新语法
+
++ 我们在遍历的过程中需要给出容器的两端：开头（begin）和结尾（end），因为这种遍历方式不是基于范围来设计的。
++ 在基于范围的for循环中，不需要再传递容器的两端，循环会自动以容器为范围展开，并且循环中也屏蔽掉了迭代器的遍历细节，直接抽取容器中的元素进行运算，使用这种方式进行循环遍历会让编码和维护变得更加简便
+
++ C++98/03中普通的for循环，语法格式：
+  ```
+    for(表达式 1; 表达式 2; 表达式 3)
+    {
+        // 循环体
+    }
+  ```
++ C++11 基于范围的 for 循环，语法格式：
+  ```
+    for (declaration : expression)
+    {
+        // 循环体
+    }
+  ``` 
++ 在上面的语法格式中 
+  + declaration 表示遍历声明，在遍历过程中，当前被遍历到的元素会被存储到声明的变量中。
+  + expression  是要遍历的对象，它可以是表达式、容器、数组、初始化列表等
+
++ 使用基于范围的 for 循环遍历容器，示例代码如下：
+  ```
+    #include <iostream>
+    #include <vector>
+    using namespace std;
+
+    int main(void)
+    {
+        vector<int> t{ 1,2,3,4,5,6 };
+        for (auto value : t)
+        {
+            cout << value << " ";
+        }
+        cout << endl;
+
+        return 0;
+    }
+  ``` 
++ 在上面的例子中，是将容器中遍历的当前元素拷贝到了声明的变量 value 中，因此无法对容器中的元素进行写操作，如果需要在遍历过程中修改元素的值，需要使用引用
++ 示例：
+  ```
+    #include <iostream>
+    #include <vector>
+    using namespace std;
+
+    int main(void)
+    {
+        vector<int> t{ 1,2,3,4,5,6 };
+        cout << "遍历修改之前的容器: ";
+        for (auto &value : t)
+        {
+            cout << value++ << " ";
+        }
+        cout << endl << "遍历修改之后的容器: ";
+
+        for (auto &value : t)
+        {
+            cout << value << " ";
+        }
+        cout << endl;
+
+        return 0;
+    }
+  ``` 
+
++ 对容器的遍历过程中，如果只是读数据，不允许修改元素的值，可以使用 const 定义保存元素数据的变量，在定义的时候建议使用 const auto &，这样相对于 const auto 效率要更高一些
+
+### 1.2 使用细节
+
++ 使用基于范围的 for 循环有一些需要注意的细节，先来看一下对关系型容器 map 的遍历：
+  ```
+    #include <iostream>
+    #include <string>
+    #include <map>
+    using namespace std;
+
+    int main(void)
+    {
+        map<int, string> m{
+            {1, "lucy"},{2, "lily"},{3, "tom"}
+        };
+
+        // 基于范围的for循环方式
+        for (auto& it : m)
+        {
+            cout << "id: " << it.first << ", name: " << it.second << endl;
+        }
+
+        // 普通的for循环方式
+        for (auto it = m.begin(); it != m.end(); ++it)
+        {
+            cout << "id: " << it->first << ", name: " << it->second << endl;
+        }
+
+        return 0;
+    }
+  ``` 
++ 在上面的例子中使用两种方式对 map 进行了遍历，通过对比有两点需要注意的事项：
+  + 使用普通的 for 循环方式（基于迭代器）遍历关联性容器， auto 自动推导出的是一个迭代器类型，需要使用迭代器的方式取出元素中的键值对（和指针的操作方法相同）：
+    + `it->first`
+    + `it->second`
+  + 使用基于访问的 for 循环遍历关联性容器，auto 自动推导出的类型是容器中的 value_type，相当于一个对组（std::pair）对象，提取键值对的方式如下：
+    + `it.first`
+    + `it.second`
+
++ 元素只读
+  + 通过对基于范围的 for 循环语法的介绍可以得知，在 for 循环内部声明一个变量的引用就可以修改遍历的表达式中的元素的值，但是这并不适用于所有的情况，对应 set 容器来说，内部元素都是只读的，这是由容器的特性决定的，因此在 for 循环中 auto & 会被视为 const auto & 
+  + 除此之外，在遍历关联型容器时也会出现同样的问题，基于范围的for循环中，虽然可以得到一个std::pair引用，但是我们是不能修改里边的first值的，也就是key值。
+
++ 访问次数：
+  + 基于范围的 for 循环遍历的对象可以是一个表达式或者容器 / 数组等。假设我们对一个容器进行遍历，在遍历过程中 for 循环对这个容器的访问频率是一次还是多次呢？
+  + 从上面的结果中可以看到，不论基于范围的 for 循环迭代了多少次，函数 getRange () 只在第一次迭代之前被调用，得到这个容器对象之后就不会再去重新获取这个对象了
+  + 对应基于范围的 for 循环来说，冒号后边的表达式只会被执行一次。在得到遍历对象之后会先确定好迭代的范围，基于这个范围直接进行遍历。如果是普通的 for 循环，在每次迭代的时候都需要判断是否已经到了结束边界
+
+## 可调用对象包装器，绑定器
+
+### 1.1 可调用对象
+
+
+## 共享智能指针
+
++ 在 C++ 中没有垃圾回收机制，必须自己释放分配的内存，否则就会造成内存泄露。解决这个问题最有效的方法是使用智能指针（smart pointer）。
++ 智能指针是存储指向动态分配（堆）对象指针的类，用于生存期的控制，能够确保在离开指针所在作用域时，自动地销毁动态分配的对象，防止内存泄露。智能指针的核心实现技术是引用计数，每使用它一次，内部引用计数加1，每析构一次内部的引用计数减1，减为0时，删除所指向的堆内存。
+
++ C++11 中提供了三种智能指针，使用这些智能指针时需要引用头文件 `<memory>`
+  + std::shared_ptr：共享的智能指针
+  + std::unique_ptr：独占的智能指针
+  + std::weak_ptr：弱引用的智能指针，它不共享指针，不能操作资源，是用来监视 shared_ptr 的
+
+### 1.2 shared_ptr 的初始化
+
++ 共享智能指针是指多个智能指针可以同时管理同一块有效的内存，共享智能指针 shared_ptr 是一个模板类，如果要进行初始化有三种方式：通过构造函数、std::make_shared 辅助函数以及 reset 方法。
++ 共享智能指针对象初始化完毕之后就指向了要管理的那块堆内存，如果想要查看当前有多少个智能指针同时管理着这块内存可以使用共享智能指针提供的一个成员函数 use_count，函数原型如下
+  ```
+    // 管理当前对象的 shared_ptr 实例数量，或若无被管理对象则为 0。
+    long use_count() const noexcept;
+  ``` 
+
++ 通过构造函数初始化：
+  ```
+    // shared_ptr<T> 类模板中，提供了多种实用的构造函数, 语法格式如下:
+    std::shared_ptr<T> 智能指针名字(创建堆内存);
+  ``` 
++ 如果智能指针被初始化了一块有效内存，那么这块内存的引用计数 + 1，如果智能指针没有被初始化或者被初始化为 nullptr 空指针，引用计数不会 + 1。另外，不要使用一个原始指针初始化多个 shared_ptr
+
++ 通过拷贝和移动构造函数初始化
+  + 当一个智能指针被初始化之后，就可以通过这个智能指针初始化其他新对象。在创建新对象的时候，对应的拷贝构造函数或者移动构造函数就被自动调用了
+  + 如果使用拷贝的方式初始化共享智能指针对象，这两个对象会同时管理同一块堆内存，堆内存对应的引用计数也会增加；如果使用移动的方式初始智能指针对象，只是转让了内存的所有权，管理内存的对象并不会增加，因此内存的引用计数不会变化。
+
++ 通过 std::make_shared 初始化
+  + 通过C++提供的`std::make_shared()`就可以完成内存对象的创建并将其初始化给智能指针，函数原型如下：
+    ```
+    template< class T, class... Args >
+    shared_ptr<T> make_shared( Args&&... args );
+    ```  
+  + 参数：
+    + `T`：模板参数的数据类型
+    + `Args&&... args` : 要初始化的数据，如果是通过make_shared创建对象，需要按照构造函数的参数列表指定
++ 使用`std::make_shared()`模板函数可以完成内存地址的创建，并将最终得到的内存地址传递给共享智能指针对象管理。如果申请的内存是普通类型，通过函数的`()`可以完成地址的初始化；如果要创建一个类对象，函数的`()`内存需要指定构造对象需要的参数，也就是类构造函数的参数
+
++ 通过 reset 方法初始化
+  + 共享智能指针类提供的 std::shared_ptr::reset 方法函数原型如下：
+    ```
+      void reset() noexcept;
+
+      template< class Y >
+      void reset( Y* ptr );
+
+      template< class Y, class Deleter >
+      void reset( Y* ptr, Deleter d );
+
+      template< class Y, class Deleter, class Alloc >
+      void reset( Y* ptr, Deleter d, Alloc alloc );
+    ``` 
+  + `ptr`：指向要取得所有权的对象的指针
+  + `d`：指向要取得所有权的对象的指针
+  + `aloc`：内部存储所用的分配器
+  + 对于一个未初始化的共享智能指针，可以通过 reset 方法来初始化，当智能指针中有值的时候，调用 reset 会使引用计数减 1
+
++ 获取原始指针：
+  + 对应基础数据类型来说，通过操作智能指针和操作智能指针管理的内存效果是一样的，可以直接完成数据的读写。但是如果共享智能指针管理的是一个对象，那么就需要取出原始内存的地址再操作，可以调用共享智能指针类提供的 get () 方法得到原始地址，其函数原型如下：
+    + `T* get() const noexcept;`
+
++ 指定删除器
+  + 当智能指针管理的内存对应的引用计数变为 0 的时候，这块内存就会被智能指针析构掉了。另外，我们在初始化智能指针的时候也可以自己指定删除动作，这个删除操作对应的函数被称之为删除器，这个删除器函数本质是一个回调函数，我们只需要进行实现，其调用是由智能指针完成的
