--- a/CPP/C++11.md
+++ b/CPP/C++11.md
@@ -409,3 +409,239 @@
 
 + 指定删除器
   + 当智能指针管理的内存对应的引用计数变为 0 的时候，这块内存就会被智能指针析构掉了。另外，我们在初始化智能指针的时候也可以自己指定删除动作，这个删除操作对应的函数被称之为删除器，这个删除器函数本质是一个回调函数，我们只需要进行实现，其调用是由智能指针完成的
+
+## 原子变量 atomic
+
++ C++11 提供了一个原子类型 `std::atomic<T>`，通过这个原子类型管理的内部变量就可以称之为原子变量，我们可以给原子类型指定 bool、char、int、long、指针等类型作为模板参数（不支持浮点类型和复合类型）
++ 原子指的是一系列不可被 CPU 上下文交换的机器指令，这些指令组合在一起就形成了原子操作。在多核 CPU 下，当某个 CPU 核心开始运行原子操作时，会先暂停其它 CPU 内核对内存的操作，以保证原子操作不会被其它 CPU 内核所干扰。
+
++ 由于原子操作是通过指令提供的支持，因此它的性能相比锁和消息传递会好很多。相比较于锁而言，原子类型不需要开发者处理加锁和释放锁的问题，同时支持修改，读取等操作，还具备较高的并发性能，几乎所有的语言都支持原子类型
++ 可以看出原子类型是无锁类型，但是无锁不代表无需等待，因为原子类型内部使用了 CAS 循环，当大量的冲突发生时，该等待还是得等待！但是总归比锁要好
+
++ C++11 内置了整形的原子变量，这样就可以更方便的使用原子变量了。在多线程操作中，使用原子变量之后就不需要再使用互斥量来保护该变量了，用起来更简洁。因为对原子变量进行的操作只能是一个原子操作（atomic operation），原子操作指的是不会被线程调度机制打断的操作，这种操作一旦开始，就一直运行到结束，中间不会有任何的上下文切换。多线程同时访问共享资源造成数据混乱的原因就是因为 CPU 的上下文切换导致的，使用原子变量解决了这个问题，因此互斥锁的使用也就不再需要了
+
++ CAS 全称是 Compare and swap, 它通过一条指令读取指定的内存地址，然后判断其中的值是否等于给定的前置值，如果相等，则将其修改为新的值
+
+### 1.1 atomic类成员
+
++ 类定义：
+  ```
+    // 定义于头文件 <atomic>
+    template< class T >
+    struct atomic;
+  ``` 
++ 通过定义可得知：在使用这个模板类的时候，一定要指定模板类型
+
++ 构造函数：
+  ```
+    // ①
+    atomic() noexcept = default;
+    // ②
+    constexpr atomic( T desired ) noexcept;
+    // ③
+    atomic( const atomic& ) = delete;
+  ```
++ 构造函数①：默认无参构造函数
++ 构造函数②：使用 desired 初始化原子变量的值
++ 构造函数③：使用 =delete 显示删除拷贝构造函数，不允许进行对象之间的拷贝
+
++ 公共成员函数：
+  + 原子类型在类内部重载了 = 操作符，并且不允许在类的外部使用 = 进行对象的拷贝
+    ```
+      T operator=( T desired ) noexcept;
+      T operator=( T desired ) volatile noexcept;
+
+      atomic& operator=( const atomic& ) = delete;
+      atomic& operator=( const atomic& ) volatile = delete;
+    ``` 
+  + 原子地以 desired 替换当前值。按照 order 的值影响内存
+    ```
+      void store( T desired, std::memory_order order = std::memory_order_seq_cst ) noexcept;
+      void store( T desired, std::memory_order order = std::memory_order_seq_cst ) volatile noexcept;
+    ```
+  + desired：存储到原子变量中的值
+  + order：强制的内存顺序
+  + 原子地加载并返回原子变量的当前值。按照`order`的值影响内存。直接访问原子对象也可以得到原子变量的当前值
+    ```
+      T load( std::memory_order order = std::memory_order_seq_cst ) const noexcept;
+      T load( std::memory_order order = std::memory_order_seq_cst ) const volatile noexcept;
+    ```
+
++ 特化成员函数
+  + 复合赋值运算符重载
+
++ 内存顺序约束：
+  + 通过上面的 API 函数我们可以看出，在调用 atomic 类提供的 API 函数的时候，需要指定原子顺序，在 C++11 给我们提供的 API 中使用枚举用作执行原子操作的函数的实参，以指定如何同步不同线程上的其他操作
+  + 定义如下：
+    ```
+      typedef enum memory_order {
+          memory_order_relaxed,   // relaxed
+          memory_order_consume,   // consume
+          memory_order_acquire,   // acquire
+          memory_order_release,   // release
+          memory_order_acq_rel,   // acquire/release
+          memory_order_seq_cst    // sequentially consistent
+      } memory_order;
+    ```
+  + memory_order_relaxed， 这是最宽松的规则，它对编译器和 CPU 不做任何限制，可以乱序
+  + memory_order_release 释放，设定内存屏障 (Memory barrier)，保证它之前的操作永远在它之前，但是它后面的操作可能被重排到它前面
+  + memory_order_acquire 获取, 设定内存屏障，保证在它之后的访问永远在它之后，但是它之前的操作却有可能被重排到它后面，往往和 Release 在不同线程中联合使用
+  + memory_order_consume：改进版的 memory_order_acquire ，开销更小
+  + memory_order_acq_rel，它是 Acquire 和 Release 的结合，同时拥有它们俩提供的保证。比如你要对一个 atomic 自增 1，同时希望该操作之前和之后的读取或写入操作不会被重新排序
+  + memory_order_seq_cst 顺序一致性， memory_order_seq_cst 就像是 memory_order_acq_rel 的加强版，它不管原子操作是属于读取还是写入的操作，只要某个线程有用到 memory_order_seq_cst 的原子操作，线程中该 memory_order_seq_cst 操作前的数据操作绝对不会被重新排在该 memory_order_seq_cst 操作之后，且该 memory_order_seq_cst 操作后的数据操作也绝对不会被重新排在 memory_order_seq_cst 操作前
+
+### 1.2 原子变量的使用
+
++ 假设我们要制作一个多线程交替数数的计数器，我们使用互斥锁和原子变量的方式分别进行实现
+
++ 互斥锁版本：
+  ```
+    #include <iostream>
+    #include <thread>
+    #include <mutex>
+    #include <atomic>
+    #include <functional>
+    using namespace std;
+
+    struct Counter
+    {
+        void increment()
+        {
+            for (int i = 0; i < 10; ++i)
+            {
+                lock_guard<mutex> locker(m_mutex);
+                m_value++;
+                cout << "increment number: " << m_value 
+                    << ", theadID: " << this_thread::get_id() << endl;
+                this_thread::sleep_for(chrono::milliseconds(100));
+            }
+        }
+
+        void decrement()
+        {
+            for (int i = 0; i < 10; ++i)
+            {
+                lock_guard<mutex> locker(m_mutex);
+                m_value--;
+                cout << "decrement number: " << m_value 
+                    << ", theadID: " << this_thread::get_id() << endl;
+                this_thread::sleep_for(chrono::milliseconds(100));
+            }
+        }
+
+        int m_value = 0;
+        mutex m_mutex;
+    };
+
+    int main()
+    {
+        Counter c;
+        auto increment = bind(&Counter::increment, &c);
+        auto decrement = bind(&Counter::decrement, &c);
+        thread t1(increment);
+        thread t2(decrement);
+
+        t1.join();
+        t2.join();
+
+        return 0;
+    }
+  ``` 
+
++ 原子变量版本
+  ```
+    #include <iostream>
+    #include <thread>
+    #include <atomic>
+    #include <functional>
+    using namespace std;
+
+    struct Counter
+    {
+        void increment()
+        {
+            for (int i = 0; i < 10; ++i)
+            {
+                m_value++;
+                cout << "increment number: " << m_value
+                    << ", theadID: " << this_thread::get_id() << endl;
+                this_thread::sleep_for(chrono::milliseconds(500));
+            }
+        }
+
+        void decrement()
+        {
+            for (int i = 0; i < 10; ++i)
+            {
+                m_value--;
+                cout << "decrement number: " << m_value
+                    << ", theadID: " << this_thread::get_id() << endl;
+                this_thread::sleep_for(chrono::milliseconds(500));
+            }
+        }
+        // atomic<int> == atomic_int
+        atomic_int m_value = 0;
+    };
+
+    int main()
+    {
+        Counter c;
+        auto increment = bind(&Counter::increment, &c);
+        auto decrement = bind(&Counter::decrement, &c);
+        thread t1(increment);
+        thread t2(decrement);
+
+        t1.join();
+        t2.join();
+
+        return 0;
+    }
+  ``` 
+
++ 通过代码的对比可以看出，使用了原子变量之后，就不需要再定义互斥量了，在使用上更加简便，并且这两种方式都能保证在多线程操作过程中数据的正确性，不会出现数据的混乱。
++ 原子类型 `atomic<T>` 可以封装原始数据最终得到一个原子变量对象，操作原子对象能够得到和操作原始数据一样的效果，当然也可以通过 store() 和 load() 来读写原子对象内部的原始数据。
+
+### 1.3 std::atomic::store
+
++ 功能：修改包含值，使用`val`替换被包含的值。该操作是原子的，并遵循由`sync`指定的内存顺序
++ 声明：
+  + `void store (T val, memory_order sync = memory_order_seq_cst) volatile noexcept;`
+  + `void store (T val, memory_order sync = memory_order_seq_cst) noexcept;`
++ 参数：
+  + `val`  --  复制到包含对象的值。`T`是`atomic`的模板参数（包含值的类型）
+  + `sync` --  操作的同步模式。这将是枚举类型`memory_order`的可能值之一：
+    + `memory_order_relaxed`  --  Relaxed  --  No synchronization of side effects
+    + `memory_order_release`  --  Release  --  Synchronizes side effects with the next consume or acquire operation
+    + `memory_order_seq_cst`  --  Sequentially consitent  --  Synchronizes all visible side effects with the other sequentially consistent operations,following a single total order.
++ 返回值：无
+
+### 1.4 std::atomic::load
+
++ 功能：读取包含值。返回这个包含的值。该操作是原子的，并遵循由`sync`指定的内存顺序
++ 声明：
+  + `T load (memory_order sync = memory_order_seq_cst) const volatile noexcept;`
+  + `T load (memory sync = memory_order_seq_cst) const noexcept;`
++ 参数：
+  + `sync`  --  操作的同步模式，这将是枚举类型`memory_order`的可能值之一：
+    + `memory_order_relaxed`  --  Relaxed  --  No synchronization of side effects
+    + `memory_order_release`  --  Release  --  Synchronizes side effects with the next consume or acquire operation
+    + `memory_order_seq_cst`  --  Sequentially consitent  --  Synchronizes all visible side effects with the other sequentially consistent operations,following a single total order.
++ 返回值：
+  + 返回包含的值
+  + t是包含值的类型（原子模板参数）
+
+### 1.5 std::atomic_load
+
++ 功能：读取包含值。返回obj中包含的值。这个操作是原子的，并使用顺序一致性(memory_order_seq_cst)。访问不同的`memory ordering`的值，看`atomic_load_explicit`
++ 声明：
+  + `template <class T> T atomic_load (const volatile atomic<T>* obj) noexcept;`
+  + `template <class T> T atomic_load (const atomic<T>* obj) noexcept;`
+  + `T atomic_load (const volatile A* obj) noexcept;`
+  + `T atomic_load (const A* obj) noexcept;`
++ 参数：
+  + `obj`  --  一个指向`atomic`对象的指针
+  + A类型代表其他过载的原子类型（如果库未实现C风格的原子类型作为原子的实例）
++ 返回值：
+  + 返回包含的值
+  + t是包含值的类型（原子模板参数）
+
