--- a/CPP/C++11.md
+++ b/CPP/C++11.md
@@ -410,7 +410,7 @@
 + 指定删除器
   + 当智能指针管理的内存对应的引用计数变为 0 的时候，这块内存就会被智能指针析构掉了。另外，我们在初始化智能指针的时候也可以自己指定删除动作，这个删除操作对应的函数被称之为删除器，这个删除器函数本质是一个回调函数，我们只需要进行实现，其调用是由智能指针完成的
 
-## 原子变量 atomic
+## 原子类型 std::atomic
 
 + C++11 提供了一个原子类型 `std::atomic<T>`，通过这个原子类型管理的内部变量就可以称之为原子变量，我们可以给原子类型指定 bool、char、int、long、指针等类型作为模板参数（不支持浮点类型和复合类型）
 + 原子指的是一系列不可被 CPU 上下文交换的机器指令，这些指令组合在一起就形成了原子操作。在多核 CPU 下，当某个 CPU 核心开始运行原子操作时，会先暂停其它 CPU 内核对内存的操作，以保证原子操作不会被其它 CPU 内核所干扰。
@@ -645,3 +645,52 @@
   + 返回包含的值
   + t是包含值的类型（原子模板参数）
 
+### 1.6 C风格API
+
++ 针对C++的atomic提案，C也有一份对应提案，它应该提供相同语义，但是不使用诸如template, reference和member function等C++特性。整个atomic接口有一个C-style对等品，称为C standard的一份扩充。
++ 可以声明`atomic_bool`取代`atomic`，并替换`store()`和`load()`，改为global函数，后者接受一个pointer指向对象
++ C另有一个接口，采用`_Atomic`和`_Atomic()`，因此C-style接口一般只用于“需要在C和C++之间保持兼容”的代码身上
+
+### 1.7 C风格数据类型
+
++ 在C++中使用C-style atomic类型并不罕见，为了兼容新的C标准(C11)，C++支持定义原子整型类型。
++ 这些类型都与`std::atomic<T>`特化类相对应，或是用同一接口特化的一个基本类型。
+
++ `std::atomic_itype`原子类型：
+  + `atomic_bool`
+  + `atomic_char`
+  + `atomic_schar`
+  + `atomic_uchar`
+  + `atomic_int`
+  + `atomic_uint`
+  + `atomic_short`
+  + `atomic_ushort`
+  + `atomic_long`
+  + `atomic_ulong`
+  + `atomic_llong`
+  + `atomic_ullong`
+  + `atomic_wchar_t`
+  + `atomic_char16_t`
+  + `atomic_char32_t`
+
++ `std::atomic<>`相关特化类：
+  + `atomic <bool>`
+  + `atomic <char>`
+  + `atomic <signed char>`
+  + `atomic <unsigned char>`
+  + `atomic <int>`
+  + `atomic <unsigned int>`
+  + `atomic <short>`
+  + `atomic <unsigned short>`
+  + `atomic <long>`
+  + `atomic <unsigned long>`
+  + `atomic <long long>`
+  + `atomic <unsigned long long>`
+  + `atomic <wchar_t>`
+  + `atomic <char16_t>`
+  + `atomic <char32_t>`
+
+### 1.8 小结
+
++ 虽然atomic原子类型使用上较为简单，但是其函数接口（原子操作）却可以有不同的内存顺序。
++ C++11从各种不同的平台上抽象出了一个软件的内存模型，并以内存顺序进行描述，以使得向进一步挖掘并行系统性能的程序员有足够简单的手段来完成以往只能通过内联汇编来完成的工作
