--- a/CPP/C++11.md
+++ b/CPP/C++11.md
@@ -694,3 +694,36 @@
 
 + 虽然atomic原子类型使用上较为简单，但是其函数接口（原子操作）却可以有不同的内存顺序。
 + C++11从各种不同的平台上抽象出了一个软件的内存模型，并以内存顺序进行描述，以使得向进一步挖掘并行系统性能的程序员有足够简单的手段来完成以往只能通过内联汇编来完成的工作
+
+## std::round, std::roundf, std::roundl, std::lround, std::lroundf, std::lroundl, std::llround, std::llroundf
+
++ 声明
+  1. `float round (float arg);`
+  2. `float roundf (float arg);`
+  3. `double round (double arg);`
+  4. `long double round (long double arg);`
+  5. `long double roundl (long double arg);`
+  6. `double round (IntegralType arg);`
+  7. `long lround (float arg);`
+  8. `long lroundf (float arg);`
+  9. `long lround (double arg);`
+  10. `long lround (long double arg);`
+  11. `long lroundl (long double arg);`
+  12. `long lround (IntegralType arg);`
+  13. `long long llround (float arg);`
+  14. `long long llroundf (float arg);`
+  15. `long long llround (double arg);`
+  16. `long long llround (long double arg);`
+  17. `long long llroundl (long double arg);`
+  18. `long long llround (IntegralType arg);`
+
++ (1-3) 计算 arg 的最接近整数值（以浮点格式），中点情况舍入为远离零，无关乎当前舍入模式。
++ (5-7, 9-11) 计算 arg 的最接近整数值（以整数格式），中点情况舍入为远离零，无关乎当前舍入模式
++ (4,8,12) 接受任何整数类型参数的重载集或函数模板。分别等价于 2) 、 6) 或 10) （将参数转型为 double ）
+
++ 参数：
+  + arg  --  浮点值
+
++ 返回值：
+  + 若不出现错误，则返回 arg 的最接近整数值，中点情况为远离零者。
+  + 若出现定义域错误，则返回实现定义值。
