--- a/ArmController/机械臂设计文档.md
+++ b/ArmController/机械臂设计文档.md
@@ -1,3 +1,24 @@
+## 机器人理论知识
+
++ 机器人有诸多的运动方式，如直线运动、关节角运动等。轨迹（点）作为机器人的运动路径，自然也有不同的运动指令类型，主要有MoveL, MoveJ, MoveAbsj, MoveC这四种。
+
+### moveJ(Move-Joint)
+
++ 机器人以最快捷的方式运动至目标点，机器人运动状态不完全可控,机器人关节怎么舒服怎么走,完全按照机器人自己的意愿执行路径,但运动路径保持唯一，常用于机器人在空间大范围移动。
+
+### moveL(Move-Line)
+
++ 机器人以线性方式运动至目标点，当前点与目标点两点决定一条严格直线，机器人运动状态可控，运动路径保持唯一。
++ 可能出现死点，常用于机器人在工作状态移动。示教的两个点之间的路径完全按照直线运动，奇异点和死机的可能性更大。
+
+### moveAbsj(Move-Absjoint)
+
++ 绝对运动指令，机器人按照角度指令来移动。机器人运动状态可控。
+
+### moveC(Move-Circle)
+
++ 圆弧运动指令，机器人通过中间点以圆弧移动方式运动至目标点，当前点、中间点与目标点三点决定一段圆弧，机器人运动状态可控，运动路径保持唯一。
+
 ## ethercat
 
 ### 1.1 启动，设置
@@ -32,7 +53,7 @@
 + 可运行程序
   + `~/ArmController.taike/build/RobotArmController`
 
-### 1.2 
+### 1.3 日志代码位置
 
 + `----status_word_:0x0,control_word:0x0---`
   + 输出的代码位置：
@@ -172,6 +193,40 @@
 + 简介：笛卡尔空间中常见的三维向量。
 + 向量 p{Ref}{Obj} 表示指向 {Ref} 中 {Obj} 原点的向量。两个向量的叉乘可以表示为第一个向量和第二个向量的斜对称矩阵的点积。
 
+### ik_solver_pos_lma.h
+
+#### CartToJnt()
+
++ 简介：计算逆位置运动学，从直角坐标（笛卡尔空间坐标）到关节坐标。
++ 声明：`bool CartToJnt(const JointVector &q_init, const Frame& p_in, JointVector& q_out) final;`
++ 参数：
+  + `q_init`  --  关节坐标的初始猜测。
+  + `p_in`    --  输入的笛卡尔空间坐标
+  + `q_out`   --  输出的关节空间坐标引用
++ 返回值：
+  + 成功  --  true
+  + 失败  --  false
+
+### ik_solver_vel_pinv_givens.h
+
++ 简介：一种基于广义伪逆的速度逆运动学求解方法，用于计算一般链的速度从笛卡尔空间到关节空间的变换。它使用基于户主轮换的svd计算。
++ 声明：`class IkSolverVelPinvGivens final : public IkSolverVel `
+
+### ik_solver_vel_pinv_nso.h
+
++ 简介：一种基于广义伪逆的速度逆运动学求解方法，用于计算一般链的速度从笛卡尔空间到关节空间的变换。它使用基于户主轮换的svd计算。
++ 声明：`class IkSolverVelPinvNso final : public IkSolverVel`
+
+### ik_solver_vel_pinv.h
+
++ 简介：一种基于广义伪逆的速度逆运动学求解方法，用于计算一般链的速度从笛卡尔空间到关节空间的变换。它使用基于户主轮换的svd计算。
++ 声明：`class IkSolverVelPinv final : public IkSolverVel`
+
+### ik_solver_vel_wdls.h
+
++ 简介：一种基于加权伪逆和阻尼最小二乘的速度逆运动学求解方法，用于计算一般链的速度从笛卡尔空间到关节空间的变换。它使用基于户主轮换的svd计算。
++ 声明：`class IkSolverVelWdls final : public IkSolverVel `
+
 ## WebServer
 
 ### 1.1 架构设计
@@ -213,12 +268,27 @@
 
 ### 1.3 模块
 
-#### 1.3.1 手动控制
+#### 1.3.1 手动控制(点动界面)
 
 + HTTP通信，发送的数据为
-  + `{"jointPosition":[10, 20, 30, 40, 50, 60]}`
+  + `{"movj":[10, 20, 30, 40, 50, 60]}`
 
 #### 1.3.2 精确控制
 
 + WebSocket通信，发送的数据为
   + `{"jointSpace":[10, 20, 30, 40, 50, 60]}`
+
+#### 1.3.3 定时同步
+
++ WebSocket通信，发送的数据为
+  + `{"JointInfo":[10.0, 20.0, 30.0, 40.0, 50.0, 60.0]}`
+
++ 新的数据格式：关节空间位置信息 + 笛卡尔空间位姿信息 + 机械臂工作状态
+  ``` 
+  "Info":
+    {
+      "Running": true | false，
+      "JointInfo":[joint1, joint2, joint3, joint4, joint5, joint6],
+      "CartInfo":[x, y, z, Rx, Ry, Rz],
+    }
+  ``` 
