--- a/ArmController/机械臂设计文档.md
+++ b/ArmController/机械臂设计文档.md
@@ -11,6 +11,10 @@
 + 机器人以线性方式运动至目标点，当前点与目标点两点决定一条严格直线，机器人运动状态可控，运动路径保持唯一。
 + 可能出现死点，常用于机器人在工作状态移动。示教的两个点之间的路径完全按照直线运动，奇异点和死机的可能性更大。
 
++ arwen工程代码中
+  + 首先，使用moveJ指令走到一个初始位置（这个初始位置是moveL所规划的直线的起始点，也可以用moveL，但是其输入的坐标是笛卡尔空间坐标，需要再正解求出，比较麻烦）
+  + 其次，调用moveL指令接收一个笛卡尔空间坐标作为终点，并在起始点和终点规划出一个直线路径，
+
 ### moveAbsj(Move-Absjoint)
 
 + 绝对运动指令，机器人按照角度指令来移动。机器人运动状态可控。
@@ -70,6 +74,7 @@
 + `Command joint position lower overrun` 
   + 输出代码位置：
     + `arwen/src/planning/security_module.cpp` 32行
+  + 简介：指挥联合位置下超限
 
 + `Joint num : 3 Command joint position upper overrun!` 
   + 输出代码位置
@@ -81,18 +86,26 @@
 + `The velocity is a negtive value:0` 
   + 输出代码位置：
     + `arwen/src/planning/curves/double_s_stop.cpp` 76行
+  + 简介：速度是一个负值:0
 
 + `delta_pos.norm : 0.194793` 
   + 输出代码位置：
     + `arwen/src/planning/planner/move_line.cpp` 74行
 
++ `KDL error: The gradient of E towards the joints is to small`
+  + 输出代码位置：
+    + `arwen/src/solver/ik_solver_pos_lma.cpp` 55行
+  + 简介：E向关节方向的梯度太小
+
 + `KDL error: The joint position increments are to small` 
   + 输出代码位置：
     + `arwen/src/dynamics/solver/ik_solver_pos_lma.cpp` 55行
+  + 简介：关节位置增量太小
 
 + `singular point! please choose another point!` 
   + 输出代码位置：
     + `arwen/src/planning/planning.cpp`  682行
+  + 简介：奇异点!请选择另一个点!
 
 ---
 
