--- a/ArmController/机械臂设计文档.md
+++ b/ArmController/机械臂设计文档.md
@@ -15,6 +15,10 @@
   + 首先，使用moveJ指令走到一个初始位置（这个初始位置是moveL所规划的直线的起始点，也可以用moveL，但是其输入的坐标是笛卡尔空间坐标，需要再正解求出，比较麻烦）
   + 其次，调用moveL指令接收一个笛卡尔空间坐标作为终点，并在起始点和终点规划出一个直线路径，
 
++ 两个点选择的注意事项：
+  + 奇异点：Base-坐标知识--机器人运动学 奇异点的概念
+  + 规划的这两个点的中间有奇异点，一般来说，选择点的时候要避开奇异点
+
 ### moveAbsj(Move-Absjoint)
 
 + 绝对运动指令，机器人按照角度指令来移动。机器人运动状态可控。
@@ -38,7 +42,32 @@
 + 查看状态
   + `ethercat slv`
 
-### 1.2 公式
+### 1.2 demo_webserver.c 分析
+
++ 包含的头文件：
+  + `ecat/ecat_master.h`
+  + `ecat/ecat_taike.h`
+
++ 使用到的类：
+  + `Master ecatmaster;`
+  + `EcatTaike ecat_taike;`
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+##  公式
 
 + 编码器增量 enc 转换 关节位置 rad （弧度）
   + `rad = (double) (enc - offset) / (double) (gear_ratio * enc_size) * (2 * PI)`
@@ -52,12 +81,12 @@
 + 角度 deg 和 弧度 rad 的变换
   + `rad = deg * (PI / 180)`
 
-### 1.2 启动测试程序
+## 启动测试程序
 
 + 可运行程序
   + `~/ArmController.taike/build/RobotArmController`
 
-### 1.3 日志代码位置
+## 日志代码位置
 
 + `----status_word_:0x0,control_word:0x0---`
   + 输出的代码位置：
@@ -106,6 +135,14 @@
   + 输出代码位置：
     + `arwen/src/planning/planning.cpp`  682行
   + 简介：奇异点!请选择另一个点!
+
++ `Domain: State 0`
+  + 输出代码位置：
+    + `arwen/src/ecat/ecat_master.cpp` 313行
+
++ `Taike_POS: 5 , Taike_STATE: Switch on Disabled`
+  + 输出代码位置：
+    + `arwen/include/ecat/ecat_taike.h` 100行
 
 ---
 
