优化了server断开处理，增加了tcp空间下的http接口和websocket指令

--- a/ArmController/机械臂设计文档.md
+++ b/ArmController/机械臂设计文档.md
@@ -1,3 +1,7 @@
+## 快速笔记
+
++ ws://192.169.7.32:9999/websocket
+
 ## 机器人理论知识
 
 + 机器人有诸多的运动方式，如直线运动、关节角运动等。轨迹（点）作为机器人的运动路径，自然也有不同的运动指令类型，主要有MoveL, MoveJ, MoveAbsj, MoveC这四种。
@@ -320,18 +324,25 @@
 
 #### 1.3.1 手动控制(点动界面)
 
-+ HTTP通信，发送的数据为
-  + `{"movj":[10, 20, 30, 40, 50, 60]}`
++ HTTP通信
+
++ 接口:`/api/control/manual/jointPosition/movj`
++ 发送的数据为：`{"movj":[10, 20, 30, 40, 50, 60]}`
+
++ 接口：`/api/control/manual/tcpPosition/movj`
++ 发送的数据为：`{"movj":[0.5, 0.7, 0.9, 10, 10, 10]}`
 
 #### 1.3.2 精确控制
 
 + WebSocket通信，发送的数据为
-  + `{"jointSpace":[10, 20, 30, 40, 50, 60]}`
+  + `{"jointSpace":[10, 20, 30, 40, 50, 60]}   // {"jointSpace":[joint_rad1, joint_rad2, joint_rad3, joint_rad4, joint_rad5, joint_rad6]}`  
+  + `{"tcpSpace":[0.5, 0.9, 0.7, 10, 10, 10]}  // {"tcpSpace":[x, y, z, Rx, Ry, Rz]}`
+
 
 #### 1.3.3 定时同步
 
-+ WebSocket通信，发送的数据为
-  + `{"JointInfo":[10.0, 20.0, 30.0, 40.0, 50.0, 60.0]}`
++ ~~旧的WebSocket通信，发送的数据为~~
+  + ~~`{"JointInfo":[10.0, 20.0, 30.0, 40.0, 50.0, 60.0]}`~~
 
 + 新的数据格式：关节空间位置信息 + 笛卡尔空间位姿信息 + 机械臂工作状态
   ``` 
