优化demo_webserver.cc

--- a/ArmController/机械臂设计文档.md
+++ b/ArmController/机械臂设计文档.md
@@ -348,7 +348,7 @@
   ``` 
   "Info":
     {
-      "Running": true | false，
+      "Running": True | False，
       "JointInfo":[joint1, joint2, joint3, joint4, joint5, joint6],
       "CartInfo":[x, y, z, Rx, Ry, Rz],
     }
