--- a/CPP/C-C++01_语言基础.md
+++ b/CPP/C-C++01_语言基础.md
@@ -109,18 +109,7 @@
 + **递减指针**：可以计算两个指针的差值。通常，求差的两个指针分别指向同一个数组的不同元素，通过计算求出两元素之间的距离。差值的单位与数组类型的单位相同
 + **比较**：使用关系运算符可以比较两个指针的值，前提是两个指针都指向相同类型的对象。
 
-## 结构体
 
-+ 结构声明(`structure declaration`)描述了**一个结构的组织布局**。
-  - 例如：`struct book{char title[MACTITLE]; char author[MAXAUTL]; float value;}`
-+ 该声明描述了一个由两个字符数组和一个`float`类型变量组成的结构。该声明并未创建实际的数据对象，只描述了**该对象由什么组成。**
-  - 有时，我们把结构声明称为模板，因为它勾勒出结构是如何存储数据的。但和C++的模板不同，C++中的模板更加强大。
-
-+ 结构有两层含义：
-  + 一层含义是**结构布局**，它告诉编译器如何表示数据，但是它并未让编译器为数据分配空间
-  + 另一层含义是**创建一个结构变量**。程序中创建结构变量的一行是：`struct book library;` 
-    + 编译器执行这行代码便创建了一个结构变量`library`。编译器使用 `book` 模板为该变量分配空间：一个内含`MAXTITLE`个元素的`char`数组，一个内含`MAXAUTL`个元素的`char`数组和一个`float`类型的变量。这些存储空间都与一个名称`library`结合在一起。
-    + 在结构变量的声明中，`struct book`所起的作用相当于一般声明中的`int`或`float`。例如，可以定义两个`struct book`类型的变量，或者甚至是指向`struct book`类型结构的指针。
 
 ## 动态内存 new/malloc delete/free
 
@@ -389,7 +378,44 @@
 
 + 这些类型在C++的早期版本就已经存在了，它们主要关注数据如何表示的问题，构成了大多数C程序的基本框架。这里描述的`struct`其实是一种简单的`class`
 
-## 结构(struct)
+### 结构(struct)
+
+### C结构体
+
++ C 数组允许定义可存储相同类型数据项的变量，结构是 C 编程中另一种用户自定义的可用的数据类型，它允许您存储不同类型的数据项。
+
++ 结构体的成员可以包含其他结构体，也可以包含指向自己结构体类型的指针，而通常这种指针的应用是为了实现一些更高级的数据结构如链表和树等
++ 如果两个结构体互相包含，则需要对其中一个结构体进行不完整声明，如下所示：
+  ```
+    struct B;    //对结构体B进行不完整声明
+     
+    //结构体A中包含指向结构体B的指针
+    struct A
+    {
+        struct B *partner;
+        //other members;
+    };
+     
+    //结构体B中包含指向结构体A的指针，在A声明完后，B也随之进行声明
+    struct B
+    {
+        struct A *partner;
+        //other members;
+    };
+  ``` 
+
+#### C++结构体
+
++ 结构声明(`structure declaration`)描述了**一个结构的组织布局**。
+  - 例如：`struct book{char title[MACTITLE]; char author[MAXAUTL]; float value;}`
++ 该声明描述了一个由两个字符数组和一个`float`类型变量组成的结构。该声明并未创建实际的数据对象，只描述了**该对象由什么组成。**
+  - 有时，我们把结构声明称为模板，因为它勾勒出结构是如何存储数据的。但和C++的模板不同，C++中的模板更加强大。
+
++ 结构有两层含义：
+  + 一层含义是**结构布局**，它告诉编译器如何表示数据，但是它并未让编译器为数据分配空间
+  + 另一层含义是**创建一个结构变量**。程序中创建结构变量的一行是：`struct book library;` 
+    + 编译器执行这行代码便创建了一个结构变量`library`。编译器使用 `book` 模板为该变量分配空间：一个内含`MAXTITLE`个元素的`char`数组，一个内含`MAXAUTL`个元素的`char`数组和一个`float`类型的变量。这些存储空间都与一个名称`library`结合在一起。
+    + 在结构变量的声明中，`struct book`所起的作用相当于一般声明中的`int`或`float`。例如，可以定义两个`struct book`类型的变量，或者甚至是指向`struct book`类型结构的指针。
 
 + 结构(`struct`), 是由任意类型元素（即成员，`member`）构成的序列
 + 在`struct`的对象中，成员按照声明的顺序依次存放。在内存中为成员分配空间时，顺序与声明结构的时候保持一致。
@@ -399,12 +425,82 @@
 
 + 类型等价：对于两个`struct`来说，即使它们的成员相同，它们本身仍是不同的类型。`struct`本身的类型与其成员的类型不能混为一谈。在程序中，每个`struct`只能有唯一的定义。
 
-## 联合(union)
+#### 结构体的初始化
+
++ 结构体是常用的自定义构造类型，是一种很常见的数据打包方法。结构体对象的初始化有多种方式，分为指定初始化、顺序初始化、构造函数初始化。
++ 假设有如下结构体：`struct A{int b; int b;};`
+
++ **指定初始化（Designated Initializer）**
+  + 实现上有两种方式:
+    + 一种是通过点号加赋值符号实现，即“.fieldname=value”，`struct A a = {.b = 1, .c = 2};`
+    + 另外一种是通过冒号实现，即“fieldname:value”，其中fieldname为指定的结构体成员名称。`struct A a = {b:1, c:2};`
+  + 前一种是C99标准引入的结构体初始化方式，但在C++中，很多编译器并不支持。
+  + Linux内核喜欢用“.fieldname=value”的方式进行初始化，使用指定初始化，一个明显的优点是成员初始化顺序和个数可变，并且扩展性好，比如增加字段时，避免了传统顺序初始化带来的大量修改。
+
++ **顺序初始化**
+  + 是我们最常用的初始化方式，因为书写起来较为简约，但相对于指定初始化，无法变更初始化顺序，灵活性较差。`struct A a1 = {1, 2};`
+
++ **构造函数初始化**
+  + 常见于C++代码中，因为C++中的struct可以看作class，结构体也可以拥有构造函数，所以我们可以通过结构体的构造函数来初始化结构体对象。
+  + 给定带有构造函数的结构体：
+    ```
+      struct A {
+        A(int a, int b){
+          this->a = a;
+          this->b = b;
+        };
+        int a;
+        int b;
+      };
+    ``` 
+  + 那么结构体对象的初始化可以像类对象的初始化那样，如下形式：`struct A a(1, 2);`
+
++ 注意： 
+  + struct如果定义了构造函数的话，就不能用大括号进行初始化了，即不能再使用指定初始化与顺序初始化了。
+
+#### 结构体的赋值
+
++ 变量的赋值和初始化是不一样的：
+  + 初始化，是在变量定义的时候完成的，是属于变量定义的一部分；
+  + 赋值，是在变量定义完成之后想改变变量值的时候所采取的操作
++ 假设有如下结构体：`struct A{int b; int b;};`
+
++ 结构体变量的赋值是不能够采用大括号的方式进行赋值的，例如下面的赋值就是不被允许的：
+  ```
+    struct A a;
+    a = {1, 2};  // 错误赋值
+  ``` 
+
++ 下面列出常见结构体变量赋值的方法：
+
++ 使用memset对结构体变量进行置空操作：【只能是POD的类型】
+  + 按照编译器默认的方式进行初始化（如果a是全局静态存储区的变量，默认初始化为0，如果是栈上的局部变量，默认初始化为随机值）
+  + `struct A a; memset(&a, 0, sizeof(a));`
+
++ 依次给每一个结构体成员变量进行赋值：
+  ```
+    struct A a;
+    a.b = 1;
+    a.c = 2;
+  ``` 
+
++ 使用已有的结构体变量给另一个结构体变量赋值。也就是说结构体变量之间是可以相互赋值的。
+  ```
+  struct A a = {1, 2};
+  struct A aa;
+  aa = a;  // 将已有的结构体变量赋值给aa
+  ``` 
+
++ **初始化与赋值有着本质的区别**: 初始化是变量定义时的第一次赋值，赋值则是定义之后的值的变更操作，概念上不同，所以实现上也不一样。
+
+---
+
+### 联合(union)
 
 + 联合(`union`)，是一种`struct`，同一时刻只保存一个元素的值
 + `union`是一种特殊的`struct`，它的所有成员都分配在同一个地址空间上。因此，一个`union`实际占用的空间大小与其最大的成员一样。自然地，在同一时刻`union`只能保存一个成员的值
 
-## 枚举(enum)
+### 枚举(enum)
 
 + 枚举(`enum`), 是包含一组命名常量（称为枚举值）的类型
 + 枚举类型(enumeration)是 C++ 中的一种派生数据类型，它是由用户定义的若干枚举常量的集合。
