删除arwen工程中用不到的源文件,将部分api封装到模块文件中webserver_api.h

--- a/ArmController/机械臂设计文档.md
+++ b/ArmController/机械臂设计文档.md
@@ -2,6 +2,12 @@
 
 + ws://192.169.7.32:9999/websocket
 
+### 工程编译
+
++ 现在头文件和源文件都在 `arwen/src/webserver/`下面，而`arwen/include/webserver`下面的头文件只是在编写代码的时候用到，编译的时候还是只有在源代码下面的目录下存放头文件才可以，这个与CMakeLists.txt的编写有关，后面再解决
++ 目前的方法：
+  + 将编写好的头文件和源文件都放在`arwen/src/webserver`下面，然后再将头文件拷贝到`arwen/include/webserver`下
+
 ## 机器人理论知识
 
 + 机器人有诸多的运动方式，如直线运动、关节角运动等。轨迹（点）作为机器人的运动路径，自然也有不同的运动指令类型，主要有MoveL, MoveJ, MoveAbsj, MoveC这四种。
