update ArmController folder

--- a/ArmController/机械臂设计文档.md
+++ b/ArmController/机械臂设计文档.md
@@ -58,6 +58,12 @@
 + 查看状态
   + `ethercat slv`
 
+### 1.2 调试命令
+
++ 查看从站状态码
+  + `ethercat upload -t int16 -p 0 0x603f 00`
+  + 
+
 ### 1.2 demo_webserver.c 分析
 
 + 包含的头文件：
@@ -82,24 +88,23 @@
 + 角度 deg 和 弧度 rad 的变换
   + `rad = deg * (PI / 180)`
 
-## 启动测试程序
-
-+ 可运行程序
-  + `~/ArmController.taike/build/RobotArmController`
-
 ## 日志代码位置
 
 + `----status_word_:0x0,control_word:0x0---`
   + 输出的代码位置：
     + `arwen/include/ecat/ecat_taike.h` 39行
 
-+ `I20230130 11:40:28.236125  5564 planning.cpp:504] No new point in buffer!` 
-  + 输出代码位置：
-    + `arwen/src/planning/planning.cpp` 504行
-
 + `Taike_POS: 5 , Taike_STATE: Fault` 
   + 输出代码位置：
     + `arwen/include/ecat/ecat_taike.h` 100行
+
++ `Domain: WC 7` 319行
+  + 输出代码位置：
+    + `arwen/src/Ecat/Ecat_Master.cpp` 319行
+
++ `I20230130 11:40:28.236125  5564 planning.cpp:504] No new point in buffer!` 
+  + 输出代码位置：
+    + `arwen/src/planning/planning.cpp` 504行
 
 + `Command joint position lower overrun` 
   + 输出代码位置：
