--- a/ArmController/机械臂设计文档.md
+++ b/ArmController/机械臂设计文档.md
@@ -283,6 +283,21 @@
 + 简介：一种基于加权伪逆和阻尼最小二乘的速度逆运动学求解方法，用于计算一般链的速度从笛卡尔空间到关节空间的变换。它使用基于户主轮换的svd计算。
 + 声明：`class IkSolverVelWdls final : public IkSolverVel `
 
+### manipulator.h
+
++ 简介：所有关于机器人硬件配置的协议
++ 通过定义宏来分别操控不同的机械臂，目前有的宏定义为：
+  + `#define TAIKE_10KG`
+  + `#define TAIKE_3KG`
+  + `#define New_arm_10kg`
+
++ 函数：
+  + `Chain Manipulator();`
+
++ 10kg机械臂需要配置约束参数，也就是在每个关节下面增加如下一行代码：
+  + `joint_constraints = dynamics::components::Joint::Constraints(M_PI / 2.0, -M_PI / 2.0, 1.0, -1.0, 1.0, -1.0, 1.0, -1.0, 2.0, -2.0);`
+  + 如果不加，则安全模块会抛出异常：`Joint num : 0 Command joint position lower overrun!`
+
 ## WebServer
 
 ### 1.1 架构设计
