--- a/ArmController/机械臂设计文档.md
+++ b/ArmController/机械臂设计文档.md
@@ -1,6 +1,9 @@
 ## 快速笔记
 
 + ws://192.169.7.32:9999/websocket
++ 远程以root用户通过vscode连接到机械臂的方法：
+  + `source bash-workspace/arm-shell-env.sh`
+  + 使用remote插件，远程连接
 
 ### demo_webserver.exe 帮助
 
