complete webserver_base.h

--- a/CPP/C-C++05_理论基础.md
+++ b/CPP/C-C++05_理论基础.md
@@ -263,3 +263,5 @@
 
 + 关于函数的返回值，最好还是返回“值”吧，最好不要返回地址啊引用啊什么的，因为你不清楚使用者会不会改变这些值，如果返回的是引用，内存中只有一份，如果用户修改了值，势必会影响到其他的。
 + 所以这个函数的原型最好是 `string test(const string& A, const string& B)`
+
+## `std::vector`的用法
