--- a/Grandhonor/vca-deploy-视频结构化分析产品部署/通用发行版部署.md
+++ b/Grandhonor/vca-deploy-视频结构化分析产品部署/通用发行版部署.md
@@ -56,7 +56,7 @@
 
 + 存放目录：`/mnt/remote/190-mnt/zhangjunyi/Docker/vca-通用发行版-docker`
 
-+ `20230220`
++ `20230220` (**有makelicence！！！**)
   + V4通用发型版本，mysql数据没有清除，
   + VideoProcess用的是5.1.3版本
   + 算力节点和管理节点都是用v4封版分支
